feat: add flag driven behavior for helm chart timeout

--- a/.env
+++ b/.env
@@ -35,3 +35,4 @@ ENABLE_RESTART_WORKLOAD=false
 ENABLE_SCOPED_VARIABLES=false
 LOGIN_PAGE_IMAGE=
 LOGIN_PAGE_IMAGE_BG=
+UPDATE_AND_INSTALL_HELM_CHART_TIME_OUT=
