--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "fast-json-patch": "^3.1.1",
         "flexsearch": "^0.6.32",
         "http-proxy-middleware": "^2.0.4",
+        "jsonpath-plus": "^7.2.0",
         "marked": "^4.3.0",
         "moment": "^2.29.4",
         "monaco-editor": "^0.19.3",
@@ -46,13 +47,13 @@
         "react-virtualized": "^9.22.3",
         "recharts": "^2.1.9",
         "rxjs": "^7.5.4",
+        "tippy.js": "^6.3.7",
         "xterm": "^4.19.0",
         "xterm-addon-fit": "^0.5.0",
         "xterm-addon-search": "^0.9.0",
         "xterm-webfont": "^2.0.0",
         "yaml": "^1.7.2",
-        "yamljs": "^0.3.0",
-        "tippy.js": "^6.3.7"
+        "yamljs": "^0.3.0"
     },
     "scripts": {
         "lint": "eslint src/**/*.tsx",
