--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "homepage": "/dashboard",
     "dependencies": {
-        "@devtron-labs/devtron-fe-common-lib": "0.0.45",
+        "@devtron-labs/devtron-fe-common-lib": "0.0.45-beta-28",
         "@rjsf/core": "^5.13.3",
         "@rjsf/utils": "^5.13.3",
         "@rjsf/validator-ajv8": "^5.13.3",
@@ -22,7 +22,6 @@
         "fast-json-patch": "^3.1.1",
         "flexsearch": "^0.6.32",
         "http-proxy-middleware": "^2.0.4",
-        "jsonpath-plus": "^7.2.0",
         "marked": "^4.3.0",
         "moment": "^2.29.4",
         "monaco-editor": "^0.19.3",
