--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
       with:
         node-version-file: '.nvmrc'
         cache: 'yarn'
+        registry-url: https://npm.pkg.github.com/
 
     - name: Install dependencies
       run: yarn install
