chore: update .env for timeout flags

--- a/.env
+++ b/.env
@@ -38,3 +38,5 @@ ANNOUNCEMENT_BANNER_MSG=
 LOGIN_PAGE_IMAGE=
 LOGIN_PAGE_IMAGE_BG=
 HIDE_DEFAULT_CLUSTER=false
+GLOBAL_API_TIMEOUT=60000
+TRIGGER_API_TIMEOUT=60000
