--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
         "@typescript-eslint/parser": "^4.33.0",
         "env-cmd": "10.1.0",
         "eslint": "^6.1.0",
+        "eslint-config-airbnb": "^18.2.1",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.22.0",
