vite changes for fixing prod build

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "homepage": "/dashboard",
     "dependencies": {
         "@devtron-labs/devtron-fe-common-lib": "0.0.41",
+        "@esbuild-plugins/node-globals-polyfill": "0.2.3",
         "@sentry/browser": "7.50.0",
         "@sentry/integrations": "7.50.0",
         "@sentry/tracing": "7.50.0",
@@ -21,8 +22,8 @@
         "http-proxy-middleware": "^2.0.6",
         "marked": "4.3.0",
         "moment": "^2.29.4",
-        "monaco-editor-webpack-plugin": "^7.1.0",
         "monaco-editor": "0.38.0",
+        "monaco-editor-webpack-plugin": "^7.1.0",
         "monaco-yaml": "4.0.4",
         "query-string": "^7.1.1",
         "react": "^17.0.2",
@@ -41,20 +42,19 @@
         "react-toastify": "^8.2.0",
         "react-virtualized": "^9.22.5",
         "recharts": "^2.1.9",
+        "rollup-plugin-node-polyfills": "0.2.1",
         "rxjs": "^7.5.4",
+        "sockjs-client": "1.6.1",
         "vite": "^4.3.3",
+        "vite-plugin-require-transform": "1.0.21",
         "vite-plugin-svgr": "^2.4.0",
         "vite-tsconfig-paths": "^4.2.0",
-        "vite-plugin-require-transform": "1.0.21",
         "xterm": "^4.19.0",
         "xterm-addon-fit": "^0.5.0",
         "xterm-addon-search": "^0.9.0",
         "xterm-webfont": "^2.0.0",
         "yaml": "^1.7.2",
-        "yamljs": "^0.3.0",
-        "sockjs-client": "1.6.1",
-        "@esbuild-plugins/node-globals-polyfill": "0.2.3",
-        "rollup-plugin-node-polyfills": "0.2.1"
+        "yamljs": "^0.3.0"
     },
     "scripts": {
         "lint": "eslint src/**/*.tsx",
