--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
     "compilerOptions": {
+        // "paths": {
+        //     "@devtron-labs/devtron-fe-common-lib/*": ["./node_modules/@devtron-labs/devtron-fe-common-lib/devtron-fe-common-lib/src/*"]
+        //   },
         "target": "ESNext",
         "lib": ["dom", "dom.iterable", "esnext"],
-        "types": ["vite/client", "vite-plugin-svgr/client"],
+        "types": ["vite/client", "vite-plugin-svgr/client", "node"],
+        "typeRoots": ["./types", "./node_modules/@types"],
         "allowJs": true,
         "skipLibCheck": true,
         "esModuleInterop": false,
@@ -19,5 +23,5 @@
         "jsx": "react-jsx"
     },
     "include": ["src"],
-    "exclude": ["node_modules", "**/*.test.tsx"]
+    "exclude": ["node_modules", "**/*.test.tsx", "dist", "build"]
 }
