--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "homepage": "/dashboard",
     "dependencies": {
-        "@devtron-labs/devtron-fe-common-lib": "0.0.41",
+        "@devtron-labs/devtron-fe-common-lib": "0.0.50-beta-2",
         "@esbuild-plugins/node-globals-polyfill": "0.2.3",
         "@sentry/browser": "7.50.0",
         "@sentry/integrations": "7.50.0",
