--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
     "compilerOptions": {
-        // "paths": {
-        //     "@devtron-labs/devtron-fe-common-lib/*": ["./node_modules/@devtron-labs/devtron-fe-common-lib/devtron-fe-common-lib/src/*"]
-        //   },
-        "target": "ESNext",
+        "target": "ES2020",
         "lib": ["dom", "dom.iterable", "esnext"],
         "types": ["vite/client", "vite-plugin-svgr/client", "node"],
         "typeRoots": ["./types", "./node_modules/@types"],
@@ -20,8 +17,8 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react"
     },
     "include": ["src"],
-    "exclude": ["node_modules", "**/*.test.tsx", "dist", "build"]
+    "exclude": ["node_modules", "**/*.test.tsx", "dist"]
 }
