env renames and comment fixes

--- a/.env
+++ b/.env
@@ -1,42 +1,42 @@
-SENTRY_ENV=staging
-SENTRY_ERROR_ENABLED=false
-SENTRY_PERFORMANCE_ENABLED=false
-SENTRY_DSN=
-SENTRY_TRACES_SAMPLE_RATE=0.2
-HOTJAR_ENABLED=false
-GA_ENABLED=false
-GA_TRACKING_ID=
-GTM_ENABLED=false
-GTM_ID=
-APPLICATION_METRICS_ENABLED=false
-POSTHOG_ENABLED=
-POSTHOG_TOKEN=
-RECOMMEND_SECURITY_SCANNING=false
-FORCE_SECURITY_SCANNING=false
-ENABLE_CI_JOB=false
-HIDE_DISCORD=false
-DEVTRON_APP_DETAILS_POLLING_INTERVAL=30000
-HELM_APP_DETAILS_POLLING_INTERVAL=30000
-EA_APP_DETAILS_POLLING_INTERVAL=30000
-CENTRAL_API_ENDPOINT=https://api.devtron.ai
-HIDE_DEPLOYMENT_GROUPS=true
-HIDE_GITOPS_OR_HELM_OPTION=true
-CONFIGURABLE_TIMEOUT=
-HIDE_APPLICATION_GROUPS=true
-REACT_APP_K8S_CLIENT=false
-USE_V2=false
-CLUSTER_TERMINAL_CONNECTION_POLLING_INTERVAL=7000
-CLUSTER_TERMINAL_CONNECTION_RETRY_COUNT=7
-ENABLE_CHART_SEARCH_IN_HELM_DEPLOY=false
-HIDE_EXCLUDE_INCLUDE_GIT_COMMITS=true
-ENABLE_BUILD_CONTEXT=false
-CLAIR_TOOL_VERSION=
-ENABLE_RESTART_WORKLOAD=false
-ENABLE_SCOPED_VARIABLES=false
-DEFAULT_CI_TRIGGER_TYPE_MANUAL=false
-ANNOUNCEMENT_BANNER_MSG=
-LOGIN_PAGE_IMAGE=
-LOGIN_PAGE_IMAGE_BG=
-HIDE_DEFAULT_CLUSTER=false
-GLOBAL_API_TIMEOUT=60000
-TRIGGER_API_TIMEOUT=60000
+VITE_SENTRY_ENV=staging
+VITE_SENTRY_ERROR_ENABLED=false
+VITE_SENTRY_PERFORMANCE_ENABLED=false
+VITE_SENTRY_DSN=
+VITE_SENTRY_TRACES_SAMPLE_RATE=0.2
+VITE_HOTJAR_ENABLED=false
+VITE_GA_ENABLED=false
+VITE_GA_TRACKING_ID=
+VITE_GTM_ENABLED=false
+VITE_GTM_ID=
+VITE_APPLICATION_METRICS_ENABLED=false
+VITE_POSTHOG_ENABLED=
+VITE_POSTHOG_TOKEN=
+VITE_RECOMMEND_SECURITY_SCANNING=false
+VITE_FORCE_SECURITY_SCANNING=false
+VITE_ENABLE_CI_JOB=false
+VITE_HIDE_DISCORD=false
+VITE_DEVTRON_APP_DETAILS_POLLING_INTERVAL=30000
+VITE_HELM_APP_DETAILS_POLLING_INTERVAL=30000
+VITE_EA_APP_DETAILS_POLLING_INTERVAL=30000
+VITE_CENTRAL_API_ENDPOINT=https://api.devtron.ai
+VITE_HIDE_DEPLOYMENT_GROUPS=true
+VITE_HIDE_GITOPS_OR_HELM_OPTION=true
+VITE_CONFIGURABLE_TIMEOUT=
+VITE_HIDE_APPLICATION_GROUPS=true
+VITE_REACT_APP_K8S_CLIENT=false
+VITE_USE_V2=false
+VITE_CLUSTER_TERMINAL_CONNECTION_POLLING_INTERVAL=7000
+VITE_CLUSTER_TERMINAL_CONNECTION_RETRY_COUNT=7
+VITE_ENABLE_CHART_SEARCH_IN_HELM_DEPLOY=false
+VITE_HIDE_EXCLUDE_INCLUDE_GIT_COMMITS=true
+VITE_ENABLE_BUILD_CONTEXT=false
+VITE_CLAIR_TOOL_VERSION=
+VITE_ENABLE_RESTART_WORKLOAD=false
+VITE_ENABLE_SCOPED_VARIABLES=false
+VITE_DEFAULT_CI_TRIGGER_TYPE_MANUAL=false
+VITE_ANNOUNCEMENT_BANNER_MSG=
+VITE_LOGIN_PAGE_IMAGE=
+VITE_LOGIN_PAGE_IMAGE_BG=
+VITE_HIDE_DEFAULT_CLUSTER=false
+VITE_GLOBAL_API_TIMEOUT=60000
+VITE_TRIGGER_API_TIMEOUT=60000
