--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
         "monaco-yaml": "4.0.4",
         "query-string": "^7.1.1",
         "react": "^17.0.2",
-        "react-app-rewired": "^2.2.1",
         "react-csv": "^2.2.2",
         "react-dates": "^21.8.0",
         "react-dom": "^17.0.2",
@@ -67,15 +66,17 @@
         "start": "vite",
         "build": "tsc && NODE_OPTIONS=--max_old_space_size=4096 vite build",
         "serve": "vite preview",
-        "build-light": "GENERATE_SOURCEMAP=false react-app-rewired build",
-        "build-k8s-app": "GENERATE_SOURCEMAP=false REACT_APP_K8S_CLIENT=true react-app-rewired build",
-        "test": "react-app-rewired test",
+        "build-light": "GENERATE_SOURCEMAP=false vite build",
+        "build-k8s-app": "GENERATE_SOURCEMAP=false VITE_REACT_APP_K8S_CLIENT=true vite build",
+        "test": "vitest test",
         "test-coverage:watch": "npm run test -- --coverage",
         "test-coverage": "npm run test -- --coverage --watchAll=false",
-        "test:ci": "./node_modules/.bin/react-app-rewired test --watchAll=false --ci --json --coverage --testLocationInResults --outputFile=report.json",
-        "eject": "react-app-rewired eject",
+        "test:ci": "jest --watchAll=false --ci --json --coverage --testLocationInResults --outputFile=report.json",
         "jest": "jest",
         "lint-staged": "lint-staged"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
     },
     "browserslist": [
         ">0.2%",
@@ -120,6 +121,7 @@
         "ts-jest": "^27.1.3",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.2",
+        "vitest": "^0.33.0",
         "worker-loader": "3.0.8"
     },
     "jest": {
