--- a/.env
+++ b/.env
@@ -40,3 +40,5 @@ LOGIN_PAGE_IMAGE_BG=
 HIDE_DEFAULT_CLUSTER=false
 GLOBAL_API_TIMEOUT=60000
 TRIGGER_API_TIMEOUT=60000
+LOGIN_DT_LOGO=
+SIDEBAR_DT_LOGO=
