--- a/package.json
+++ b/package.json
@@ -117,11 +117,12 @@
         "mock-socket": "^9.2.1",
         "prettier": "^2.6.0",
         "react-test-render": "^1.1.2",
-        "sass": "^1.55.0",
+        "sass": "^1.69.7",
         "ts-jest": "^27.1.3",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.2",
         "vitest": "^0.33.0",
+        "vite-plugin-pwa": "0.17.4",
         "worker-loader": "3.0.8"
     },
     "jest": {
