--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "homepage": "/dashboard",
     "dependencies": {
-        "@devtron-labs/devtron-fe-common-lib": "0.0.55-beta-3",
+        "@devtron-labs/devtron-fe-common-lib": "0.0.55-beta-7",
         "@esbuild-plugins/node-globals-polyfill": "0.2.3",
         "@rjsf/core": "^5.13.3",
         "@rjsf/utils": "^5.13.3",
@@ -56,8 +56,7 @@
         "xterm-addon-fit": "^0.5.0",
         "xterm-addon-search": "^0.9.0",
         "xterm-webfont": "^2.0.0",
-        "yaml": "^1.7.2",
-        "yamljs": "^0.3.0"
+        "yaml": "^1.7.2"
     },
     "scripts": {
         "prepare": "husky install",
@@ -98,24 +97,24 @@
         "@types/react-transition-group": "^4.4.4",
         "@types/recharts": "^1.8.23",
         "@types/recompose": "^0.30.10",
-        "@typescript-eslint/eslint-plugin": "^4.33.0",
-        "@typescript-eslint/parser": "^4.33.0",
         "env-cmd": "10.1.0",
-        "eslint": "^6.1.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-react": "^7.22.0",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^3.4.1",
+        "@typescript-eslint/eslint-plugin": "^6.17.0",
+        "@typescript-eslint/parser": "^6.17.0",
+        "eslint": "^8.56.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "eslint-plugin-prettier": "^5.1.2",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "husky": "^7.0.4",
         "jest-extended": "^2.0.0",
         "jest-junit": "^13.0.0",
         "jsdom-worker": "^0.2.1",
         "lint-staged": "12.5.0",
         "mock-socket": "^9.2.1",
-        "prettier": "^2.6.0",
+        "prettier": "^3.1.1",
         "react-test-render": "^1.1.2",
         "sass": "^1.69.7",
         "ts-jest": "^27.1.3",
@@ -125,7 +124,6 @@
         "vite-plugin-pwa": "0.17.4",
         "worker-loader": "3.0.8",
         "workbox-window": "7.0.0",
-        "@rollup/plugin-replace": "5.0.5",
         "workbox-core": "^7.0.0",
         "workbox-precaching": "^7.0.0",
         "workbox-routing": "^7.0.0"
