--- a/package.json
+++ b/package.json
@@ -63,10 +63,10 @@
         "lint": "tsc --noEmit && NODE_OPTIONS=--max_old_space_size=8192 eslint 'src/**/*.{js,jsx,ts,tsx}' --max-warnings 0",
         "lint-fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
         "start": "vite",
-        "build": "tsc && NODE_OPTIONS=--max_old_space_size=4096 vite build",
+        "build": "NODE_OPTIONS=--max_old_space_size=4096 vite build",
         "serve": "vite preview",
-        "build-light": "GENERATE_SOURCEMAP=false vite build",
-        "build-k8s-app": "GENERATE_SOURCEMAP=false VITE_REACT_APP_K8S_CLIENT=true vite build",
+        "build-light": "GENERATE_SOURCEMAP=false NODE_OPTIONS=--max_old_space_size=4096 vite build",
+        "build-k8s-app": "GENERATE_SOURCEMAP=false NODE_OPTIONS=--max_old_space_size=4096 VITE_REACT_APP_K8S_CLIENT=true vite build",
         "test": "vitest test",
         "test-coverage:watch": "npm run test -- --coverage",
         "test-coverage": "npm run test -- --coverage --watchAll=false",
