--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react",
-        "paths": {
-            "react": ["./node_modules/react", "./node_modules/@types/react/index.d.ts",]
-        }
+        // "paths": {
+        //     "react": ["./node_modules/react", "./node_modules/@types/react/index.d.ts",]
+        // }
     },
     "include": ["src"],
     "exclude": ["node_modules", "**/*.test.tsx", "dist"]
