import.meta fixed

--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ VITE_HIDE_DEPLOYMENT_GROUPS=true
 VITE_HIDE_GITOPS_OR_HELM_OPTION=true
 VITE_CONFIGURABLE_TIMEOUT=
 VITE_HIDE_APPLICATION_GROUPS=true
-VITE_REACT_APP_K8S_CLIENT=false
+VITE_K8S_CLIENT=false
 VITE_USE_V2=false
 VITE_CLUSTER_TERMINAL_CONNECTION_POLLING_INTERVAL=7000
 VITE_CLUSTER_TERMINAL_CONNECTION_RETRY_COUNT=7
