--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
-VITE_REACT_APP_ORCHESTRATOR_ROOT="/orchestrator"
-VITE_REACT_APP_GRAFANA_ORG_ID=2
+VITE_ORCHESTRATOR_ROOT="/orchestrator"
+VITE_GRAFANA_ORG_ID=2
 VITE_NODE_ENV="production"
+BASE_URL="/dashboard"
