--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
         "build": "NODE_OPTIONS=--max_old_space_size=8192 vite build",
         "serve": "vite preview",
         "build-light": "GENERATE_SOURCEMAP=false NODE_OPTIONS=--max_old_space_size=8192 vite build",
-        "build-k8s-app": "GENERATE_SOURCEMAP=false NODE_OPTIONS=--max_old_space_size=8192 VITE_REACT_APP_K8S_CLIENT=true vite build",
+        "build-k8s-app": "GENERATE_SOURCEMAP=false NODE_OPTIONS=--max_old_space_size=8192 VITE_K8S_CLIENT=true vite build",
         "test": "vitest test",
         "test-coverage:watch": "npm run test -- --coverage",
         "test-coverage": "npm run test -- --coverage --watchAll=false",
