--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ HIDE_GITOPS_OR_HELM_OPTION=true
 CONFIGURABLE_TIMEOUT=
 HIDE_APPLICATION_GROUPS=true
 REACT_APP_K8S_CLIENT=false
-USE_V2=false
+USE_V2=true
 CLUSTER_TERMINAL_CONNECTION_POLLING_INTERVAL=7000
 CLUSTER_TERMINAL_CONNECTION_RETRY_COUNT=7
 ENABLE_CHART_SEARCH_IN_HELM_DEPLOY=false
