--- a/package.json
+++ b/package.json
@@ -61,10 +61,10 @@
         "lint": "tsc --noEmit && NODE_OPTIONS=--max_old_space_size=8192 eslint 'src/**/*.{js,jsx,ts,tsx}' --max-warnings 0",
         "lint-fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
         "start": "vite",
-        "build": "NODE_OPTIONS=--max_old_space_size=8192 vite build",
         "serve": "vite preview",
-        "build-light": "GENERATE_SOURCEMAP=false NODE_OPTIONS=--max_old_space_size=8192 vite build",
-        "build-k8s-app": "GENERATE_SOURCEMAP=false NODE_OPTIONS=--max_old_space_size=8192 VITE_K8S_CLIENT=true vite build",
+        "build": "NODE_OPTIONS=--max_old_space_size=8192 vite build --sourcemap true",
+        "build-light": "NODE_OPTIONS=--max_old_space_size=8192 vite build",
+        "build-k8s-app": "NODE_OPTIONS=--max_old_space_size=8192 vite build --mode K8S_CLIENT",
         "test": "vitest test",
         "test-coverage:watch": "npm run test -- --coverage",
         "test-coverage": "npm run test -- --coverage --watchAll=false",
