--- a/package.json
+++ b/package.json
@@ -92,9 +92,10 @@
         "@types/react-transition-group": "^4.4.4",
         "@types/recharts": "^1.8.23",
         "@types/recompose": "^0.30.10",
-        "env-cmd": "10.1.0",
         "@typescript-eslint/eslint-plugin": "^6.17.0",
         "@typescript-eslint/parser": "^6.17.0",
+        "@vitest/coverage-v8": "^1.2.2",
+        "env-cmd": "10.1.0",
         "eslint": "^8.56.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^9.1.0",
@@ -104,8 +105,10 @@
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "husky": "^7.0.4",
+        "jest": "29.7.0",
         "jest-extended": "^2.0.0",
         "jest-junit": "^13.0.0",
+        "jsdom": "^24.0.0",
         "jsdom-worker": "^0.2.1",
         "lint-staged": "12.5.0",
         "mock-socket": "^9.2.1",
@@ -115,13 +118,13 @@
         "ts-jest": "^27.1.3",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.2",
-        "vitest": "^0.33.0",
         "vite-plugin-pwa": "0.17.4",
-        "worker-loader": "3.0.8",
-        "workbox-window": "7.0.0",
+        "vitest": "^1.2.2",
         "workbox-core": "^7.0.0",
         "workbox-precaching": "^7.0.0",
-        "workbox-routing": "^7.0.0"
+        "workbox-routing": "^7.0.0",
+        "workbox-window": "7.0.0",
+        "worker-loader": "3.0.8"
     },
     "jest": {
         "collectCoverageFrom": [
