--- a/package.json
+++ b/package.json
@@ -121,7 +121,9 @@
         "workbox-window": "7.0.0",
         "workbox-core": "^7.0.0",
         "workbox-precaching": "^7.0.0",
-        "workbox-routing": "^7.0.0"
+        "workbox-routing": "^7.0.0",
+        "workbox-navigation-preload": "7.0.0",
+        "workbox-strategies": "7.0.0"
     },
     "jest": {
         "collectCoverageFrom": [
