app group integration

--- a/.env
+++ b/.env
@@ -44,3 +44,5 @@ SIDEBAR_DT_LOGO=
 USE_V2=
 ENABLE_EXTERNAL_ARGO_CD=false
 API_BATCH_SIZE=20
+DEPLOYMENT_BLACKOUT_PERIOD=0
+DEPLOYMENT_MAINTENANCE_PERIOD=0
