--- a/.env
+++ b/.env
@@ -46,3 +46,4 @@ ENABLE_EXTERNAL_ARGO_CD=false
 API_BATCH_SIZE=20
 SERVICE_WORKER_TIMEOUT='1'
 ENABLE_RESOURCE_SCAN=false
+ENABLE_RESOURCE_SCAN_V2=false
