--- a/.env
+++ b/.env
@@ -46,3 +46,4 @@ ENABLE_EXTERNAL_ARGO_CD=false
 API_BATCH_SIZE=20
 SERVICE_WORKER_TIMEOUT='1'
 FEATURE_USER_DEFINED_GITOPS_REPO_ENABLE=false
+ENABLE_GITOPS_BITBUCKET_SOURCE=false
