chore: use dayjs, remove unneeded code, downshift state
fix: open dynamic tab & k8sResource tab title & url on first load

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "flexsearch": "^0.6.32",
         "http-proxy-middleware": "^2.0.6",
         "marked": "4.3.0",
+        "dayjs": "^1.11.8",
         "moment": "^2.29.4",
         "monaco-editor": "0.45.0",
         "monaco-yaml": "5.1.1",
