chore: add check for draft PR in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,7 @@ on:
 
 jobs:
   ci:
-    permissions:
-      contents: read
-      packages: read
+    if: ${{ !github.event.pull_request.draft }}
 
     runs-on: ubuntu-latest
     steps:
@@ -24,12 +22,9 @@ jobs:
       with:
         node-version-file: '.nvmrc'
         cache: 'yarn'
-        registry-url: https://npm.pkg.github.com/
 
     - name: Install dependencies
       run: yarn install
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Check linting issues
       run: yarn lint
