--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ DEVTRON_APP_DETAILS_POLLING_INTERVAL=30000
 HELM_APP_DETAILS_POLLING_INTERVAL=30000
 EA_APP_DETAILS_POLLING_INTERVAL=30000
 CENTRAL_API_ENDPOINT=https://api.devtron.ai
+HIDE_DEPLOYMENT_GROUPS=true
 HIDE_GITOPS_OR_HELM_OPTION=true
 CONFIGURABLE_TIMEOUT=
 HIDE_APPLICATION_GROUPS=true
