feat: add organization name

--- a/.env
+++ b/.env
@@ -51,3 +51,4 @@ ENABLE_RESOURCE_SCAN_V2=false
 ENABLE_GITOPS_BITBUCKET_SOURCE=false
 HIDE_RELEASES=true
 HIDE_RESOURCE_WATCHER=true
+ORGANIZATION_NAME=''
