--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -2,14 +2,18 @@ server {
   listen 8080;
   root /usr/share/nginx/html;
   index index.html index.htm;
-  
+
   location / {
-    try_files $uri $uri/ /index.html =404;
+    set $fallback_file /index.html;
+    if ($http_accept !~ text/html) {
+        set $fallback_file /null;
+    }
+    try_files $uri $uri/ $fallback_file =404;
   }
 
   location /health {
     try_files $uri $uri/ /health.html =404;
   }
-  
+
   include /etc/nginx/extra-conf.d/*.conf;
 }
