fix: add 404 fallback

--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -6,7 +6,7 @@ server {
   location / {
     set $fallback_file /index.html;
     if ($http_accept !~ text/html) {
-        set $fallback_file /null;
+        set $fallback_file =404;
     }
     try_files $uri $uri/ $fallback_file =404;
   }
