fix: add fallback routing

--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -5,9 +5,17 @@ server {
 
   location / {
     set $fallback_file /index.html;
-    if ($http_accept !~ text/html) {
-        set $fallback_file =404;
+
+    if ($uri ~* "service-worker.js$") {
+      add_header Cache-Control "no-cache";
+      set $fallback_file =404;
     }
+
+    if ($uri ~* "\.\w+$") {
+      add_header Cache-Control "public, max-age=31536000, immutable";
+      set $fallback_file =404;
+    }
+
     try_files $uri $uri/ $fallback_file =404;
   }
 
