--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -6,11 +6,13 @@ server {
   location / {
     set $fallback_file /index.html;
 
+    # no caching for service worker file
     if ($uri ~* "service-worker.js$") {
       add_header Cache-Control "no-cache";
       set $fallback_file =404;
     }
 
+    # add the caching header for files ending with extends and fallback to 404
     if ($uri ~* "\.\w+$") {
       add_header Cache-Control "public, max-age=31536000, immutable";
       set $fallback_file =404;
