update handling of assets

--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -12,8 +12,8 @@ server {
       set $fallback_file =404;
     }
 
-    # add the caching header for files ending with extends and fallback to 404
-    if ($uri ~* "\.\w+$") {
+    # add the caching header for assets file and fallback to 404
+    if ($uri ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|json)$) {
       add_header Cache-Control "public, max-age=31536000, immutable";
       set $fallback_file =404;
     }
