feat: add env-config to no-cache

--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -5,19 +5,19 @@ server {
 
   location / {
     set $fallback_file /index.html;
-
-    # no caching for service worker file
-    if ($uri ~* "service-worker.js$") {
-      add_header Cache-Control "no-cache";
-      set $fallback_file =404;
-    }
+    set $cache_control_header "max-age=3600";
 
     # add the caching header for assets file and fallback to 404
     if ($uri ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|json)$) {
-      add_header Cache-Control "public, max-age=31536000, immutable";
+      set $cache_control_header "public, max-age=31536000, immutable";
       set $fallback_file =404;
     }
 
+    if ($uri ~* "\/(service-worker|env-config)\.js$") {
+        set $cache_control_header "no-cache";
+    }
+
+    add_header Cache-Control $cache_control_header;
     try_files $uri $uri/ $fallback_file =404;
   }
 
