--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -8,7 +8,7 @@ server {
     set $cache_control_header "max-age=3600";
 
     # add the caching header for assets file and fallback to 404
-    if ($uri ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|json)$) {
+    if ($uri ~* \.(js|js\.map|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|json)$) {
       set $cache_control_header "public, max-age=31536000, immutable";
       set $fallback_file =404;
     }
