--- a/.env
+++ b/.env
@@ -51,3 +51,4 @@ ENABLE_RESOURCE_SCAN_V2=false
 HIDE_RELEASES=true
 HIDE_RESOURCE_WATCHER=true
 ORGANIZATION_NAME=
+FEATURE_EXTERNAL_FLUX_CD_ENABLE=false
