--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
         "@vitejs/plugin-react": "^4.0.0",
         "command-line-parser": "^0.2.10",
         "compute-histogram": "^0.9.11",
+        "dayjs": "^1.11.8",
+        "dompurify": "^3.0.2",
         "fast-json-patch": "^3.1.1",
         "flexsearch": "^0.6.32",
-        "dayjs": "^1.11.8",
+        "jsonpath-plus": "^9.0.0",
+        "marked": "4.3.0",
         "moment": "^2.29.4",
         "monaco-editor": "0.44.0",
         "monaco-yaml": "5.1.1",
@@ -51,9 +54,7 @@
         "xterm-addon-fit": "^0.5.0",
         "xterm-addon-search": "^0.9.0",
         "xterm-webfont": "^2.0.0",
-        "yaml": "^2.4.1",
-        "marked": "4.3.0",
-        "dompurify": "^3.0.2"
+        "yaml": "^2.4.1"
     },
     "scripts": {
         "prepare": "husky install",
