feat: move scoped variables to url and add feature flag for env list scoped variables

--- a/.env
+++ b/.env
@@ -52,3 +52,4 @@ ENABLE_GITOPS_BITBUCKET_SOURCE=false
 HIDE_RELEASES=true
 HIDE_RESOURCE_WATCHER=true
 ORGANIZATION_NAME=
+FEATURE_SCOPED_VARIABLE_ENVIRONMENT_LIST_ENABLE=false
