--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,30 @@
 {
     "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "react": [
+                "./node_modules/react",
+                "./node_modules/@types/react/index.d.ts",
+            ],
+            "@Icons/*": [
+                "./src/assets/icons/*"
+            ],
+            "@Images/*": [
+                "./src/assets/img/*"
+            ],
+            "@Components/*": [
+                "./src/components/*"
+            ],
+            "@Config/*": [
+                "./src/config/*"
+            ],
+            "@Pages/*": [
+                "./src/Pages/*"
+            ],
+            "@Services/*": [
+                "./src/services/*"
+            ],
+        },
         "target": "ES2020",
         "lib": ["dom", "dom.iterable", "esnext", "WebWorker"],
         "types": ["vite/client", "vite-plugin-svgr/client", "node", "vite-plugin-pwa/react", "vite-plugin-pwa/info"],
@@ -17,11 +42,8 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react",
-        "paths": {
-            "react": ["./node_modules/react", "./node_modules/@types/react/index.d.ts",]
-        }
+        "jsx": "react-jsx",
     },
-    "include": ["src"],
+    "include": ["src", "./src/custom.d.ts", "./src/vite-env.d.ts"],
     "exclude": ["node_modules", "**/*.test.tsx", "dist"]
 }
