--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "react-mde": "^11.5.0",
         "react-monaco-editor": "^0.55.0",
         "react-router-dom": "^5.3.4",
-        "react-select": "^5.2.2",
+        "react-select": "5.8.0",
         "react-toastify": "^8.2.0",
         "react-virtualized": "^9.22.5",
         "recharts": "^2.1.9",
