flag added in dashboard

--- a/.env
+++ b/.env
@@ -52,3 +52,4 @@ HIDE_RELEASES=true
 HIDE_RESOURCE_WATCHER=true
 ORGANIZATION_NAME=
 FEATURE_SCOPED_VARIABLE_ENVIRONMENT_LIST_ENABLE=false
+FEATURE_IMAGE_PROMOTION_LIST_ENABLE=true
