--- a/.env
+++ b/.env
@@ -43,6 +43,7 @@ SIDEBAR_DT_LOGO=
 ENABLE_EXTERNAL_ARGO_CD=false
 API_BATCH_SIZE=20
 SERVICE_WORKER_TIMEOUT='1'
+ENABLE_RESOURCE_SCAN=false
 FEATURE_USER_DEFINED_GITOPS_REPO_ENABLE=false
 ENABLE_RESOURCE_SCAN_V2=false
 HIDE_RELEASES=true
