chore: update .env file with SYSTEM_CONTROLLER_LISTING_TIMEOUT

--- a/.env
+++ b/.env
@@ -51,3 +51,4 @@ HIDE_RESOURCE_WATCHER=true
 ORGANIZATION_NAME=
 FEATURE_SCOPED_VARIABLE_ENVIRONMENT_LIST_ENABLE=false
 HIDE_NETWORK_STATUS_INTERFACE=true
+SYSTEM_CONTROLLER_LISTING_TIMEOUT=300000
