--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "lint": "tsc --noEmit && eslint 'src/**/*.{js,jsx,ts,tsx}' --max-warnings 0",
         "lint-fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
         "start": "vite --open --host",
-        "build": "vite build",
+        "build": "NODE_OPTIONS=--max_old_space_size=8192 vite build",
         "serve": "vite preview",
         "build-light": "GENERATE_SOURCEMAP=false vite build",
         "build-k8s-app": "GENERATE_SOURCEMAP=false VITE_K8S_CLIENT=true vite build",
