--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
         "@types/react-transition-group": "^4.4.4",
         "@types/recharts": "^1.8.23",
         "@types/recompose": "^0.30.10",
-        "@typescript-eslint/eslint-plugin": "^6.17.0",
-        "@typescript-eslint/parser": "^6.17.0",
+        "@typescript-eslint/eslint-plugin": "8.3.0",
+        "@typescript-eslint/parser": "8.3.0",
         "env-cmd": "10.1.0",
         "eslint": "^8.56.0",
         "eslint-config-airbnb": "^19.0.4",
