--- a/pnpm-workspace.ent.yaml
+++ b/pnpm-workspace.ent.yaml
@@ -1,3 +1,3 @@
 packages:
-  - '../devtron-fe-lib'
-  - '../devtron-fe-common-lib'
+  - 'packages/devtron-fe-lib'
+  - 'packages/devtron-fe-common-lib'
