--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
         "test-coverage": "npm run test -- --coverage --watchAll=false",
         "test:ci": "jest --watchAll=false --ci --json --coverage --testLocationInResults --outputFile=report.json",
         "jest": "jest",
-        "lint-staged": "lint-staged"
+        "lint-staged": "lint-staged",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
     },
     "browserslist": [
         ">0.2%",
@@ -79,8 +81,18 @@
         "not op_mini all"
     ],
     "devDependencies": {
+        "@chromatic-com/storybook": "^1.8.0",
         "@playwright/test": "^1.32.1",
         "@sentry/cli": "^2.2.0",
+        "@storybook/addon-a11y": "^8.2.9",
+        "@storybook/addon-actions": "^8.2.9",
+        "@storybook/addon-essentials": "^8.2.9",
+        "@storybook/addon-interactions": "^8.2.9",
+        "@storybook/addon-links": "^8.2.9",
+        "@storybook/blocks": "^8.2.9",
+        "@storybook/react": "^8.2.9",
+        "@storybook/react-vite": "^8.2.9",
+        "@storybook/test": "^8.2.9",
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.4",
         "@types/jest": "^27.4.1",
@@ -104,6 +116,7 @@
         "eslint-plugin-prettier": "^5.1.2",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-storybook": "^0.8.0",
         "husky": "^7.0.4",
         "jest-extended": "^2.0.0",
         "jest-junit": "^13.0.0",
@@ -113,6 +126,7 @@
         "prettier": "^3.1.1",
         "react-test-render": "^1.1.2",
         "sass": "^1.69.7",
+        "storybook": "^8.2.9",
         "ts-jest": "29.2.5",
         "ts-node": "10.9.2",
         "typescript": "5.5.4",
