--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
         "husky": "^7.0.4",
         "jest-extended": "^2.0.0",
         "jest-junit": "^13.0.0",
+        "jsdom": "^25.0.0",
         "jsdom-worker": "^0.2.1",
         "lint-staged": "12.5.0",
         "mock-socket": "^9.2.1",
