fix: use lock server in storybook docker file

--- a/Dockerfile.storybook
+++ b/Dockerfile.storybook
@@ -13,14 +13,15 @@ COPY tsconfig.json .
 COPY vite.config.mts .
 COPY . .
 
-RUN yarn build-storybook
+# RUN yarn build-storybook
 
-FROM nginx:stable
+# FROM nginx:stable
 
-# RUN useradd -ms /bin/bash devtron
-COPY --from=builder /app/storybook-static/ /usr/share/nginx/html
-WORKDIR /usr/share/nginx/html
+# COPY --from=builder /app/storybook-static/ /usr/share/nginx/html
+# WORKDIR /usr/share/nginx/html
 
-# RUN chown -R devtron:devtron /usr/share/nginx/html
-# USER devtron
-CMD ["/bin/bash", "-c", "nginx -g \"daemon off;\""]
+# CMD ["/bin/bash", "-c", "nginx -g \"daemon off;\""]
+
+# Change to build-storybook and nginx when the static build is working
+CMD ["yarn", "storybook", "--exact-port", "--no-open"]
+EXPOSE 6006
