--- a/.eslintignore
+++ b/.eslintignore
@@ -462,7 +462,7 @@ src/components/v2/common/ReactSelectCustomization.tsx
 src/components/v2/common/message.ui.tsx
 src/components/v2/devtronStackManager/AboutDevtronView.tsx
 src/components/v2/devtronStackManager/DevtronStackManager.component.tsx
-src/components/v2/devtronStackManager/DevtronStackManager.service.ts
+src/components/v2/devtronStackManager/DevtronStackManager.service.tsx
 src/components/v2/devtronStackManager/DevtronStackManager.tsx
 src/components/v2/devtronStackManager/DevtronStackManager.utils.ts
 src/components/v2/devtronStackManager/SuccessModalComponent.tsx
